@@ -1,5 +1,8 @@
 linotp (3.4~dev0-1) UNRELEASED; urgency=low
 
+  Breaking Changes:
+  * changed default `BACKUP_DIR` to `/var/backups/linotp`
+
   Fix:
   * wrongly aligned resize bar on Manage UI flexigrid tables when browser is zoomed or scaled
 
